k8s/devlinks-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devlinks-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devlinks-backend
  template:
    metadata:
      labels:
        app: devlinks-backend
    spec:
      containers:
        - name: devlinks-backend
          image: singhjoginder321/devlinks-backend:v1
          ports:
            - containerPort: 8081
