k8s/devlinks-backend-migration-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devlinks-backend-migration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devlinks-backend-migration
  template:
    metadata:
      labels:
        app: devlinks-backend-migration
    spec:
      containers:
        - name: devlinks-backend-migration
          image: singhjoginder321/devlinks-backend-migration:v1
