k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devlinks-backend
spec:
  selector:
    app: devlinks-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP # or LoadBalancer, NodePort based on your needs
