k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: your-app-domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devlinks-backend
                port:
                  number: 8081
  tls:
    - hosts:
        - your-app-domain.com
      secretName: tls-secret
